ShopFrontEnd/src/app/components/cart/cart.component.css
.cart-item-info {
    margin-left: 10px;
    flex-grow: 1;
  }
  
  .cart-item-info h3 {
    margin: 0;
    font-size: 18px;
  }
  .cart-item-actions {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
  }
  .btn-remove {
    background-color: #811010;
    border: none;
    color: white;
    padding: 5px 10px;
    cursor: pointer;
    margin-top: -15px;
  }
  .carts-container
  {
    max-width: 580px; /* Default is usually around 960px */
    width: 90%; /* Increase the width */
    margin: 0 auto; /* Keep it centered */
    margin-top: 207px;
  }
  .section {
    padding: 80px 20px;
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 40px;
    /* You can adjust this value */
    margin-bottom: 40px;
    /* This will add space at the bottom */
  }
  .cart-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
  }
  .btn-clear {
    background-color: #811010;
    color: white;
    width: 100%;
    margin-top: 10px;
    height: 28px;
    text-align: center;
    line-height: 28px; /* Match the height */
    border: none; /* Remove any border */
    outline: none; /* Remove focus outline */
    border-radius: 5px; /* Rounded corners */
    font-family: Roboto;
}

